--- a/src/containers/UserInfo/UserInfo.css
+++ b/src/containers/UserInfo/UserInfo.css
@@ -1,11 +1,17 @@
-.offline{
-    color: red
+.offline {
+  color: red;
 }
 
-.online{
-    color: green
+.online {
+  color: green;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
+
+td a {
+  font-weight: bold;
+  color: blue;
+}
+/*# sourceMappingURL=UserInfo.css.map */
